--- a/Index.html
+++ b/Index.html
@@ -12,15 +12,38 @@
 
 <body>
     <div class="nav">
-        <img class="logo" src="Logo/20230103-channeling_art-logo-02.jpg">
-        <div class="menu">
-            <h3 class="border-bottom">My Works</h3>
-            <h3 class="font"><a href="/index-about.html">About</a></h3>
-            <h3 class="font">Contact</h3>
-            <span class="line"></span>
+        <div class="icon-mobile">
             <i class="fa-brands fa-instagram fa-2x icone"></i>
             <i class="fa-brands fa-facebook fa-2x icone"></i>
         </div>
+        <img class="logo" src="Logo/20230103-channeling_art-logo-02.jpg">
+        <div class="menu">
+            <div class="border">
+                <h3>My Works</h3>
+                <span class="border-bottom"></span>
+            </div>
+            <h3 class="font"><a href="/index-about.html">About</a></h3>
+            <h3 class="font"> <a href=""> Contact</a></h3>
+            <span class="line"></span>
+            <i class="fa-brands fa-instagram fa-2x icone"></i>
+            <i class="fa-brands fa-facebook fa-2x icone margin-10px"></i>
+        </div>
+
+        <div id="burger" class="menu-burger">
+            <a id="closeBtn" href="#" class="close">×</a>
+            <ul>
+                <li><a href="#">My Works</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <a href="#" id="openBtn">
+            <span class="burger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+        </a>
     </div>
 
     <div class="container">
@@ -28,6 +51,23 @@
             <h1> My Works</h1>
             <span class="line-work"></span>
         </div>
+
+        <nav>
+            <ul>
+                <li class="menu-deroulant">
+                    <a href="#">Collection</a>
+                    <ul class="sous-menu">
+                        <li><a href="#">Collection 01</a></li>
+                        <li><a href="#">Collection 02</a></li>
+                        <li><a href="#">Collection 03</a></li>
+                        <li><a href="#">Collection 04</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+
+
+
         <div class="collection">
             <p>Collection:</p>
             <p class="box">Collection 01</p>
@@ -39,28 +79,29 @@
 
 
         <div class="galerie">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
-            <img class="picture" src="Logo/20230103-channeling_art-logo-02.jpg">
+            <img class="picture" src="Image/images3.jpg">
+            <img class="picture" src="Image/images2.jpg">
+            <img class="picture" src="Image/images.jpg">
+            <img class="picture" src="Image/images4.jpg">
+            <img class="picture" src="Image/images.jpg">
+            <img class="picture" src="Image/images4.jpg">
+            <img class="picture" src="Image/images3.jpg">
+            <img class="picture" src="Image/images2.jpg">
+            <img class="picture" src="Image/images.jpg">
+            <img class="picture" src="Image/images2.jpg">
+            <img class="picture" src="Image/images1.jpg">
+            <img class="picture" src="Image/images3.jpg">
+            <img class="picture" src="Image/images3.jpg">
+            <img class="picture" src="Image/images2.jpg">
+            <img class="picture" src="Image/images1.jpg">
+            <img class="picture" src="Image/images2.jpg">
+            <img class="picture" src="Image/images.jpg">
+            <img class="picture" src="Image/images2.jpg">
+            <img class="picture" src="Image/images3.jpg">
+            <img class="picture" src="Image/images4jpg">
         </div>
     </div>
+    <script src="script-menu.js" type="text/javascript"></script>
 </body>
 
 </html>
