--- a/index-about.html
+++ b/index-about.html
@@ -7,20 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style-aboout.css">
     <script src="https://kit.fontawesome.com/d6ad601a10.js" crossorigin="anonymous"></script>
-    <title>Channeling Art</title>
+    <title>About</title>
 </head>
 
 <body>
     <div class="nav">
-        <img class="logo" src="Logo/20230103-channeling_art-logo-02.jpg">
-        <div class="menu">
-            <h3 class="font">My Works</h3>
-            <h3 class="border-bottom">About</h3>
-            <h3 class="font">Contact</h3>
-            <span class="line"></span>
+        <div class="icon-mobile">
             <i class="fa-brands fa-instagram fa-2x icone"></i>
             <i class="fa-brands fa-facebook fa-2x icone"></i>
         </div>
+        <img class="logo" src="Logo/20230103-channeling_art-logo-02.jpg">
+        <div class="menu">
+            <h3 class="font"> <a href="">My Works</a></h3>
+            <div class="border">
+                <h3>About</h3>
+                <span class="border-bottom"></span>
+            </div>
+            <h3 class="font"> <a href="">Contact</a></h3>
+            <span class="line"></span>
+            <i class="fa-brands fa-instagram fa-2x icone"></i>
+            <i class="fa-brands fa-facebook fa-2x icone margin-10px"></i>
+        </div>
+
+        <div id="burger" class="menu-burger">
+            <a id="closeBtn" href="#" class="close">×</a>
+            <ul>
+                <li><a href="#">My Works</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <a href="#" id="openBtn">
+            <span class="burger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+        </a>
     </div>
 
     <div class="container">
@@ -31,10 +54,11 @@
     </div>
     <div class="structure">
         <div class="image">
-            <img src="Image/index.jpg">
+            <img src="Image/Screen Shot 2020-06-26 at 2.55.33 PM_1593198524.webp">
         </div>
 
         <div class="presentation">
+            <h2>Katia Streiff</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti ab nihil aspernatur repellendus
                 cumque,
                 eligendi porro minima quod delectus molestias blanditiis exercitationem ipsa voluptatum ex, id nostrum
@@ -44,8 +68,15 @@
                 necessitatibus sapiente. Sit, ducimus rem suscipit natus quo perferendis doloribus eveniet ut soluta
                 esse?
             </p>
+
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, quo consectetur! Adipisci molestias ex
+                vitae ab tenetur dolore, aliquam deleniti, nemo quod quisquam excepturi sit! Fugiat atque rerum ab
+                alias.</p>
+
         </div>
     </div>
+
+    <script src="script-menu.js" type="text/javascript"></script>
 </body>
 
 </html>
