--- a/index-contact.html
+++ b/index-contact.html
@@ -7,20 +7,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style-contact.css">
     <script src="https://kit.fontawesome.com/d6ad601a10.js" crossorigin="anonymous"></script>
-    <title>Channeling Art</title>
+    <title>Contact</title>
 </head>
 
 <body>
     <div class="nav">
-        <img class="logo" src="Logo/20230103-channeling_art-logo-02.jpg">
-        <div class="menu">
-            <h3 class="font">My Works</h3>
-            <h3 class="font">About</h3>
-            <h3 class="border-bottom">Contact</h3>
-            <span class="line"></span>
+        <div class="icon-mobile">
             <i class="fa-brands fa-instagram fa-2x icone"></i>
             <i class="fa-brands fa-facebook fa-2x icone"></i>
         </div>
+        <img class="logo" src="Logo/20230103-channeling_art-logo-02.jpg">
+        <div class="menu">
+            <h3 class="font"> <a href="">My Works</a></h3>
+            <h3 class="font"> <a href="">About</a></h3>
+            <div class="border">
+                <h3>Contact</h3>
+                <span class="border-bottom"></span>
+            </div>
+            <span class="line"></span>
+            <i class="fa-brands fa-instagram fa-2x icone"></i>
+            <i class="fa-brands fa-facebook fa-2x icone margin-10px"></i>
+        </div>
+        <div id="burger" class="menu-burger">
+            <a id="closeBtn" href="#" class="close">×</a>
+            <ul>
+                <li><a href="#">My Works</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+
+        <a href="#" id="openBtn">
+            <span class="burger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+        </a>
+
     </div>
 
     <div class="container">
@@ -58,9 +82,11 @@
                     class="bottom width-82">
             </div>
         </form>
+        <p class="required">*Required</p>
     </div>
 
-    <button class="custom-btn btn-5"><span>Send</span></button>
+    <button class="custom-btn btn"><span>Send</span></button>
+    <script src="script-menu.js" type="text/javascript"></script>
 </body>
 
 </html>
