--- a/index-loading.html
+++ b/index-loading.html
@@ -2,27 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style-loading.css">
-    <link rel="stylesheet" href="script.js">
-    <title>Document</title>
+    <title>Loading</title>
 </head>
 
 <body>
-    <div class="picture">
-        <img class="picture" src="Logo/20230103-channeling_art-logo-02-rogner.jpg">
-    </div>
+    <div class="container">
+        <div class="width-100">
+            <img src="Logo/20230103-channeling_art-logo-02.jpg">
+        </div>
 
-
-    <div class="wrapper">
-        <div class="load-bar">
-
-            <div class="load-bar-inner" data-loading="0">
-            </div>
+        <div id="progressBar">
+            <div class="data" id="data" data-progress="0%"></div>
         </div>
     </div>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 
 </html>
